# SPDX-License-Identifier: Apache-2.0

load("@rules_hdl//verilog:providers.bzl", "verilog_library")
load("//bazel:br_verilog.bzl", "br_verilog_elab_and_lint_test_suite")

package(default_visibility = ["//visibility:public"])

verilog_library(
    name = "br_csr_axil_widget",
    srcs = ["br_csr_axil_widget.sv"],
    deps = [
        "//amba/rtl:br_amba_pkg",
        "//counter/rtl:br_counter_incr",
        "//flow/rtl:br_flow_demux_select_unstable",
        "//flow/rtl:br_flow_join",
        "//flow/rtl:br_flow_mux_rr_stable",
        "//flow/rtl:br_flow_reg_fwd",
        "//macros:br_asserts_internal",
        "//macros:br_registers",
        "//macros:br_tieoff",
    ],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_csr_axil_widget_test_suite",
    params = {
        "AddrWidth": ["16"],
        "DataWidth": [
            "32",
            "64",
        ],
        "MaxTimeoutCycles": [
            "100",
            "63",
        ],
        "RegisterResponseOutputs": [
            "0",
            "1",
        ],
    },
    deps = [":br_csr_axil_widget"],
)

verilog_library(
    name = "br_csr_demux",
    srcs = ["br_csr_demux.sv"],
    deps = [
        "//delay/rtl:br_delay",
        "//delay/rtl:br_delay_valid",
        "//macros:br_asserts_internal",
        "//mux/rtl:br_mux_onehot",
    ],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_csr_demux_test_suite",
    params = {
        "AddrWidth": ["4"],
        "DataWidth": [
            "32",
            "64",
        ],
        "NumDownstreams": [
            "2",
            "3",
        ],
        "HasDefaultDownstream": [
            "0",
            "1",
        ],
    },
    deps = [":br_csr_demux"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_csr_demux_test_suite_single_downstream",
    params = {
        "AddrWidth": ["4"],
        "DataWidth": [
            "32",
            "64",
        ],
        "NumDownstreams": ["1"],
        "HasDefaultDownstream": ["0"],
    },
    deps = [":br_csr_demux"],
)

verilog_library(
    name = "br_csr_cdc",
    srcs = ["br_csr_cdc.sv"],
    deps = [
        "//cdc/rtl:br_cdc_bit_pulse",
        "//cdc/rtl:br_cdc_reg",
    ],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_csr_cdc_test_suite",
    params = {
        "AddrWidth": ["12"],
        "DataWidth": ["32"],
        "RegisterResetActive": [
            "0",
            "1",
        ],
        "RegisterDownstreamReqOutputs": [
            "0",
            "1",
        ],
        "RegisterUpstreamRespOutputs": [
            "0",
            "1",
        ],
        "RegisterDownstreamAbort": [
            "0",
            "1",
        ],
    },
    top = "br_csr_cdc",
    deps = [
        ":br_csr_cdc",
        "//gate/rtl:br_gate_mock",
    ],
)

verilog_library(
    name = "br_csr_mem_interface",
    srcs = ["br_csr_mem_interface.sv"],
    deps = [
        "//csr/rtl/internal:br_csr_checks_intg",
        "//csr/rtl/internal:br_csr_request_reg",
        "//macros:br_asserts_internal",
        "//macros:br_registers",
        "//macros:br_unused",
        "//mux/rtl:br_mux_onehot",
        "//pkg:br_math_pkg",
    ],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_csr_mem_interface_test_suite",
    params = {
        "CsrAddrWidth": ["12"],
        "CsrDataWidth": [
            "32",
            "64",
        ],
        "MemDepth": [
            "1",
            "4",
        ],
        "MemWidth": [
            "8",
            "16",
            "32",
        ],
        "RegisterMemOutputs": [
            "0",
            "1",
        ],
        "RegisterResponseOutputs": [
            "0",
            "1",
        ],
    },
    deps = [":br_csr_mem_interface"],
)
