# SPDX-License-Identifier: Apache-2.0

load("@rules_hdl//verilog:providers.bzl", "verilog_library")
load("//bazel:br_verilog.bzl", "br_verilog_elab_and_lint_test_suite", "br_verilog_yosys_synth_suite")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "srcs",
    srcs = glob(["*.sv"]) + ["//csr/rtl/internal:srcs"],
)

verilog_library(
    name = "br_csr_axil_widget",
    srcs = ["br_csr_axil_widget.sv"],
    deps = [
        "//amba/rtl:br_amba_pkg",
        "//counter/rtl:br_counter_incr",
        "//delay/rtl:br_delay_valid",
        "//flow/rtl:br_flow_demux_select_unstable",
        "//flow/rtl:br_flow_join",
        "//flow/rtl:br_flow_mux_rr",
        "//flow/rtl:br_flow_reg_fwd",
        "//macros:br_asserts_internal",
        "//macros:br_registers",
        "//macros:br_tieoff",
    ],
)

br_verilog_yosys_synth_suite(
    name = "br_csr_axil_widget_baseline_ppa",
    params = {
        "AddrWidth": ["16"],
        "DataWidth": ["32"],
        "MaxTimeoutCycles": ["100"],
        "RegisterCsrRequestOutputs": ["0"],
        "RegisterResponseOutputs": ["0"],
    },
    deps = [":br_csr_axil_widget"],
)

br_verilog_yosys_synth_suite(
    name = "br_csr_axil_widget_scaled_registered_ppa",
    params = {
        "AddrWidth": ["32"],
        "DataWidth": ["64"],
        "MaxTimeoutCycles": ["1000"],
        "RegisterCsrRequestOutputs": ["1"],
        "RegisterResponseOutputs": ["1"],
    },
    deps = [":br_csr_axil_widget"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_csr_axil_widget_test_suite",
    params = {
        "AddrWidth": ["16"],
        "DataWidth": [
            "32",
            "64",
        ],
        "MaxTimeoutCycles": [
            "100",
            "63",
        ],
        "RegisterResponseOutputs": [
            "0",
            "1",
        ],
        "RegisterCsrRequestOutputs": [
            "0",
            "1",
        ],
    },
    deps = [":br_csr_axil_widget"],
)

verilog_library(
    name = "br_csr_demux_select_onehot",
    srcs = ["br_csr_demux_select_onehot.sv"],
    deps = [
        "//delay/rtl:br_delay",
        "//delay/rtl:br_delay_valid",
        "//macros:br_asserts_internal",
        "//macros:br_registers",
        "//mux/rtl:br_mux_onehot",
    ],
)

br_verilog_yosys_synth_suite(
    name = "br_csr_demux_select_onehot_baseline_ppa",
    params = {
        "AddrWidth": ["16"],
        "DataWidth": ["32"],
        "NumDownstreams": ["4"],
    },
    deps = [":br_csr_demux_select_onehot"],
)

br_verilog_yosys_synth_suite(
    name = "br_csr_demux_select_onehot_scaled_ppa",
    params = {
        "AddrWidth": ["32"],
        "DataWidth": ["64"],
        "NumDownstreams": ["16"],
    },
    deps = [":br_csr_demux_select_onehot"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_csr_demux_select_onehot_test_suite",
    params = {
        "AddrWidth": ["4"],
        "DataWidth": [
            "32",
            "64",
        ],
        "NumDownstreams": [
            "2",
            "3",
        ],
    },
    deps = [":br_csr_demux_select_onehot"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_csr_demux_select_onehot_test_suite_single_downstream",
    params = {
        "AddrWidth": ["4"],
        "DataWidth": [
            "32",
            "64",
        ],
        "NumDownstreams": ["1"],
    },
    deps = [":br_csr_demux_select_onehot"],
)

verilog_library(
    name = "br_csr_demux",
    srcs = ["br_csr_demux.sv"],
    deps = [
        ":br_csr_demux_select_onehot",
        "//demux/rtl:br_demux_addr_decode",
        "//macros:br_asserts_internal",
    ],
)

br_verilog_yosys_synth_suite(
    name = "br_csr_demux_baseline_ppa",
    params = {
        "AddrWidth": ["16"],
        "DataWidth": ["32"],
        "HasDefaultDownstream": ["0"],
        "NumDownstreams": ["4"],
    },
    deps = [":br_csr_demux"],
)

br_verilog_yosys_synth_suite(
    name = "br_csr_demux_scaled_ppa",
    params = {
        "AddrWidth": ["32"],
        "DataWidth": ["64"],
        "HasDefaultDownstream": ["1"],
        "NumDownstreams": ["16"],
    },
    deps = [":br_csr_demux"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_csr_demux_test_suite",
    params = {
        "AddrWidth": ["4"],
        "DataWidth": [
            "32",
            "64",
        ],
        "NumDownstreams": [
            "2",
            "3",
        ],
        "HasDefaultDownstream": [
            "0",
            "1",
        ],
    },
    deps = [":br_csr_demux"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_csr_demux_test_suite_single_downstream",
    params = {
        "AddrWidth": ["4"],
        "DataWidth": [
            "32",
            "64",
        ],
        "NumDownstreams": ["1"],
        "HasDefaultDownstream": ["0"],
    },
    deps = [":br_csr_demux"],
)

verilog_library(
    name = "br_csr_cdc",
    srcs = ["br_csr_cdc.sv"],
    deps = [
        "//cdc/rtl:br_cdc_bit_pulse",
        "//cdc/rtl:br_cdc_reg",
    ],
)

br_verilog_yosys_synth_suite(
    name = "br_csr_cdc_baseline_ppa",
    params = {
        "AddrWidth": ["16"],
        "DataWidth": ["32"],
        "NumSyncStages": ["2"],
        "RegisterDownstreamAbort": ["0"],
        "RegisterDownstreamReqOutputs": ["0"],
        "RegisterUpstreamRespOutputs": ["0"],
    },
    deps = [":br_csr_cdc"],
)

br_verilog_yosys_synth_suite(
    name = "br_csr_cdc_scaled_registered_ppa",
    params = {
        "AddrWidth": ["32"],
        "DataWidth": ["64"],
        "NumSyncStages": ["3"],
        "RegisterDownstreamAbort": ["1"],
        "RegisterDownstreamReqOutputs": ["1"],
        "RegisterUpstreamRespOutputs": ["1"],
    },
    deps = [":br_csr_cdc"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_csr_cdc_test_suite",
    params = {
        "AddrWidth": ["12"],
        "DataWidth": ["32"],
        "RegisterResetActive": [
            "0",
            "1",
        ],
        "RegisterDownstreamReqOutputs": [
            "0",
            "1",
        ],
        "RegisterUpstreamRespOutputs": [
            "0",
            "1",
        ],
        "RegisterDownstreamAbort": [
            "0",
            "1",
        ],
    },
    top = "br_csr_cdc",
    deps = [
        ":br_csr_cdc",
        "//gate/rtl:br_gate_mock",
    ],
)

verilog_library(
    name = "br_csr_mem_interface",
    srcs = ["br_csr_mem_interface.sv"],
    deps = [
        "//csr/rtl/internal:br_csr_checks_intg",
        "//csr/rtl/internal:br_csr_request_reg",
        "//macros:br_asserts_internal",
        "//macros:br_registers",
        "//macros:br_unused",
        "//mux/rtl:br_mux_onehot",
        "//pkg:br_math_pkg",
    ],
)

br_verilog_yosys_synth_suite(
    name = "br_csr_mem_interface_baseline_ppa",
    params = {
        "CsrAddrWidth": ["16"],
        "CsrDataWidth": ["32"],
        "EnablePartialWrites": ["0"],
        "MemDepth": ["16"],
        "MemWidth": ["32"],
        "RegisterMemOutputs": ["0"],
        "RegisterResponseOutputs": ["0"],
    },
    deps = [":br_csr_mem_interface"],
)

br_verilog_yosys_synth_suite(
    name = "br_csr_mem_interface_scaled_registered_ppa",
    params = {
        "CsrAddrWidth": ["20"],
        "CsrDataWidth": ["64"],
        "EnablePartialWrites": ["1"],
        "MemDepth": ["64"],
        "MemWidth": ["64"],
        "RegisterMemOutputs": ["1"],
        "RegisterResponseOutputs": ["1"],
    },
    deps = [":br_csr_mem_interface"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_csr_mem_interface_test_suite",
    params = {
        "CsrAddrWidth": ["12"],
        "CsrDataWidth": [
            "32",
            "64",
        ],
        "MemDepth": [
            "1",
            "4",
        ],
        "MemWidth": [
            "8",
            "16",
            "32",
        ],
        "RegisterMemOutputs": [
            "0",
            "1",
        ],
        "RegisterResponseOutputs": [
            "0",
            "1",
        ],
    },
    deps = [":br_csr_mem_interface"],
)
